[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Maps/test.tres" type="TileSet" id=1]
[ext_resource path="res://src/Maps/Room.gd" type="Script" id=2]
[ext_resource path="res://src/Objects/Doors/Doors_front.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/Doors/Player_detector.tscn" type="PackedScene" id=4]

[node name="Room1" type="TileMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
collision_layer = 8
collision_mask = 4175
format = 1
tile_data = PoolIntArray( -2228153, 0, 0, -2228152, 1, 0, -2228151, 1, 0, -2228150, 1, 0, -2228149, 1, 0, -2228148, 2, 0, -2162620, 0, 0, -2162619, 12, 0, -2162618, 12, 0, -2162617, 12, 0, -2162616, 8, 0, -2162615, 8, 0, -2162614, 8, 0, -2162613, 8, 0, -2162612, 9, 0, -2162611, 1, 0, -2162610, 2, 0, -2097085, 0, 0, -2097084, 12, 0, -2097083, 8, 0, -2097082, 8, 0, -2097081, 8, 0, -2097080, 8, 0, -2097079, 8, 0, -2097078, 8, 0, -2097077, 8, 0, -2097076, 8, 0, -2097075, 8, 0, -2097074, 9, 0, -2097073, 2, 0, -2097058, 0, 0, -2097057, 1, 0, -2097056, 1, 0, -2097055, 1, 0, -2097054, 1, 0, -2097053, 1, 0, -2097052, 1, 0, -2097051, 2, 0, -2031550, 0, 0, -2031549, 12, 0, -2031548, 8, 0, -2031547, 8, 0, -2031546, 8, 0, -2031545, 8, 0, -2031544, 8, 0, -2031543, 8, 0, -2031542, 8, 0, -2031541, 8, 0, -2031540, 8, 0, -2031539, 8, 0, -2031538, 8, 0, -2031537, 9, 0, -2031536, 2, 0, -2031523, 0, 0, -2031522, 12, 0, -2031521, 8, 0, -2031520, 8, 0, -2031519, 8, 0, -2031518, 8, 0, -2031517, 8, 0, -2031516, 8, 0, -2031515, 9, 0, -2031514, 2, 0, -1966015, 0, 0, -1966014, 12, 0, -1966013, 8, 0, -1966012, 8, 0, -1966011, 8, 0, -1966010, 8, 0, -1966009, 8, 0, -1966008, 8, 0, -1966007, 8, 0, -1966006, 8, 0, -1966005, 8, 0, -1966004, 8, 0, -1966003, 8, 0, -1966002, 8, 0, -1966001, 8, 0, -1966000, 4, 0, -1965988, 0, 0, -1965987, 12, 0, -1965986, 8, 0, -1965985, 8, 0, -1965984, 8, 0, -1965983, 8, 0, -1965982, 8, 0, -1965981, 8, 0, -1965980, 8, 0, -1965979, 8, 0, -1965978, 9, 0, -1965977, 2, 0, -1900479, 3, 0, -1900478, 8, 0, -1900477, 8, 0, -1900476, 8, 0, -1900475, 8, 0, -1900474, 8, 0, -1900473, 8, 0, -1900472, 8, 0, -1900471, 8, 0, -1900470, 8, 0, -1900469, 8, 0, -1900468, 8, 0, -1900467, 8, 0, -1900466, 8, 0, -1900465, 8, 0, -1900464, 4, 0, -1900452, 3, 0, -1900451, 8, 0, -1900450, 8, 0, -1900449, 8, 0, -1900448, 8, 0, -1900447, 8, 0, -1900446, 8, 0, -1900445, 8, 0, -1900444, 8, 0, -1900443, 8, 0, -1900442, 8, 0, -1900441, 4, 0, -1834943, 3, 0, -1834942, 8, 0, -1834941, 8, 0, -1834940, 8, 0, -1834939, 8, 0, -1834938, 8, 0, -1834937, 8, 0, -1834936, 8, 0, -1834935, 8, 0, -1834934, 8, 0, -1834933, 8, 0, -1834932, 8, 0, -1834931, 8, 0, -1834930, 8, 0, -1834929, 8, 0, -1834928, 4, 0, -1834917, 0, 0, -1834916, 12, 0, -1834915, 8, 0, -1834914, 8, 0, -1834913, 8, 0, -1834912, 8, 0, -1834911, 8, 0, -1834910, 8, 0, -1834909, 8, 0, -1834908, 8, 0, -1834907, 8, 0, -1834906, 8, 0, -1834905, 9, 0, -1834904, 2, 0, -1769408, 0, 0, -1769407, 12, 0, -1769406, 8, 0, -1769405, 8, 0, -1769404, 8, 0, -1769403, 8, 0, -1769402, 8, 0, -1769401, 8, 0, -1769400, 8, 0, -1769399, 8, 0, -1769398, 8, 0, -1769397, 8, 0, -1769396, 8, 0, -1769395, 8, 0, -1769394, 8, 0, -1769393, 8, 0, -1769392, 9, 0, -1769391, 1, 0, -1769390, 12, 0, -1769389, 8, 0, -1769388, 8, 0, -1769387, 9, 0, -1769386, 1, 0, -1769385, 1, 0, -1769384, 1, 0, -1769383, 1, 0, -1769382, 1, 0, -1769381, 12, 0, -1769380, 8, 0, -1769379, 8, 0, -1769378, 8, 0, -1769377, 8, 0, -1769376, 8, 0, -1769375, 8, 0, -1769374, 8, 0, -1769373, 8, 0, -1769372, 8, 0, -1769371, 8, 0, -1769370, 8, 0, -1769369, 8, 0, -1769368, 4, 0, -1703872, 3, 0, -1703871, 8, 0, -1703870, 8, 0, -1703869, 8, 0, -1703868, 8, 0, -1703867, 8, 0, -1703866, 8, 0, -1703865, 8, 0, -1703864, 8, 0, -1703863, 8, 0, -1703862, 8, 0, -1703861, 8, 0, -1703860, 8, 0, -1703859, 8, 0, -1703858, 8, 0, -1703857, 8, 0, -1703856, 8, 0, -1703855, 8, 0, -1703854, 8, 0, -1703853, 8, 0, -1703852, 8, 0, -1703851, 8, 0, -1703850, 8, 0, -1703849, 8, 0, -1703848, 8, 0, -1703847, 8, 0, -1703846, 8, 0, -1703845, 8, 0, -1703844, 8, 0, -1703843, 8, 0, -1703842, 8, 0, -1703841, 8, 0, -1703840, 8, 0, -1703839, 8, 0, -1703838, 8, 0, -1703837, 8, 0, -1703836, 8, 0, -1703835, 8, 0, -1703834, 8, 0, -1703833, 8, 0, -1703832, 4, 0, -1638336, 3, 0, -1638335, 8, 0, -1638334, 8, 0, -1638333, 8, 0, -1638332, 8, 0, -1638331, 8, 0, -1638330, 8, 0, -1638329, 8, 0, -1638328, 8, 0, -1638327, 8, 0, -1638326, 8, 0, -1638325, 8, 0, -1638324, 8, 0, -1638323, 8, 0, -1638322, 8, 0, -1638321, 8, 0, -1638320, 8, 0, -1638319, 8, 0, -1638318, 8, 0, -1638317, 8, 0, -1638316, 8, 0, -1638315, 8, 0, -1638314, 8, 0, -1638313, 8, 0, -1638312, 8, 0, -1638311, 8, 0, -1638310, 8, 0, -1638309, 8, 0, -1638308, 8, 0, -1638307, 8, 0, -1638306, 8, 0, -1638305, 8, 0, -1638304, 8, 0, -1638303, 8, 0, -1638302, 8, 0, -1638301, 8, 0, -1638300, 8, 0, -1638299, 8, 0, -1638298, 8, 0, -1638297, 8, 0, -1638296, 4, 0, -1572800, 3, 0, -1572799, 8, 0, -1572798, 8, 0, -1572797, 8, 0, -1572796, 8, 0, -1572795, 8, 0, -1572794, 8, 0, -1572793, 8, 0, -1572792, 8, 0, -1572791, 8, 0, -1572790, 8, 0, -1572789, 8, 0, -1572788, 8, 0, -1572787, 8, 0, -1572786, 8, 0, -1572785, 8, 0, -1572784, 8, 0, -1572783, 8, 0, -1572782, 8, 0, -1572781, 8, 0, -1572780, 8, 0, -1572779, 8, 0, -1572778, 8, 0, -1572777, 8, 0, -1572776, 8, 0, -1572775, 8, 0, -1572774, 8, 0, -1572773, 8, 0, -1572772, 8, 0, -1572771, 8, 0, -1572770, 8, 0, -1572769, 8, 0, -1572768, 8, 0, -1572767, 8, 0, -1572766, 8, 0, -1572765, 8, 0, -1572764, 8, 0, -1572763, 8, 0, -1572762, 8, 0, -1572761, 8, 0, -1572760, 4, 0, -1507264, 5, 0, -1507263, 11, 0, -1507262, 8, 0, -1507261, 8, 0, -1507260, 8, 0, -1507259, 8, 0, -1507258, 8, 0, -1507257, 8, 0, -1507256, 8, 0, -1507255, 8, 0, -1507254, 8, 0, -1507253, 8, 0, -1507252, 8, 0, -1507251, 8, 0, -1507250, 8, 0, -1507249, 8, 0, -1507248, 8, 0, -1507247, 8, 0, -1507246, 8, 0, -1507245, 8, 0, -1507244, 8, 0, -1507243, 8, 0, -1507242, 8, 0, -1507241, 8, 0, -1507240, 8, 0, -1507239, 8, 0, -1507238, 8, 0, -1507237, 8, 0, -1507236, 8, 0, -1507235, 8, 0, -1507234, 8, 0, -1507233, 8, 0, -1507232, 8, 0, -1507231, 8, 0, -1507230, 8, 0, -1507229, 8, 0, -1507228, 8, 0, -1507227, 8, 0, -1507226, 8, 0, -1507225, 8, 0, -1507224, 4, 0, -1441727, 3, 0, -1441726, 8, 0, -1441725, 8, 0, -1441724, 8, 0, -1441723, 8, 0, -1441722, 8, 0, -1441721, 8, 0, -1441720, 8, 0, -1441719, 8, 0, -1441718, 8, 0, -1441717, 8, 0, -1441716, 8, 0, -1441715, 8, 0, -1441714, 8, 0, -1441713, 8, 0, -1441712, 8, 0, -1441711, 8, 0, -1441710, 8, 0, -1441709, 8, 0, -1441708, 8, 0, -1441707, 8, 0, -1441706, 8, 0, -1441705, 8, 0, -1441704, 8, 0, -1441703, 8, 0, -1441702, 8, 0, -1441701, 8, 0, -1441700, 8, 0, -1441699, 8, 0, -1441698, 8, 0, -1441697, 8, 0, -1441696, 8, 0, -1441695, 8, 0, -1441694, 8, 0, -1441693, 8, 0, -1441692, 8, 0, -1441691, 8, 0, -1441690, 8, 0, -1441689, 8, 0, -1441688, 4, 0, -1376191, 3, 0, -1376190, 8, 0, -1376189, 8, 0, -1376188, 8, 0, -1376187, 8, 0, -1376186, 8, 0, -1376185, 8, 0, -1376184, 8, 0, -1376183, 8, 0, -1376182, 8, 0, -1376181, 8, 0, -1376180, 8, 0, -1376179, 8, 0, -1376178, 8, 0, -1376177, 8, 0, -1376176, 8, 0, -1376175, 8, 0, -1376174, 8, 0, -1376173, 8, 0, -1376172, 8, 0, -1376171, 8, 0, -1376170, 8, 0, -1376169, 8, 0, -1376168, 8, 0, -1376167, 8, 0, -1376166, 8, 0, -1376165, 8, 0, -1376164, 8, 0, -1376163, 8, 0, -1376162, 8, 0, -1376161, 8, 0, -1376160, 8, 0, -1376159, 8, 0, -1376158, 8, 0, -1376157, 8, 0, -1376156, 8, 0, -1376155, 8, 0, -1376154, 8, 0, -1376153, 8, 0, -1376152, 4, 0, -1310655, 3, 0, -1310654, 8, 0, -1310653, 8, 0, -1310652, 8, 0, -1310651, 8, 0, -1310650, 8, 0, -1310649, 8, 0, -1310648, 8, 0, -1310647, 8, 0, -1310646, 8, 0, -1310645, 8, 0, -1310644, 8, 0, -1310643, 8, 0, -1310642, 8, 0, -1310641, 8, 0, -1310640, 8, 0, -1310639, 8, 0, -1310638, 8, 0, -1310637, 8, 0, -1310636, 8, 0, -1310635, 8, 0, -1310634, 8, 0, -1310633, 8, 0, -1310632, 8, 0, -1310631, 8, 0, -1310630, 8, 0, -1310629, 8, 0, -1310628, 8, 0, -1310627, 8, 0, -1310626, 8, 0, -1310625, 8, 0, -1310624, 8, 0, -1310623, 8, 0, -1310622, 8, 0, -1310621, 8, 0, -1310620, 8, 0, -1310619, 8, 0, -1310618, 8, 0, -1310617, 8, 0, -1310616, 4, 0, -1245119, 5, 0, -1245118, 11, 0, -1245117, 8, 0, -1245116, 8, 0, -1245115, 8, 0, -1245114, 8, 0, -1245113, 8, 0, -1245112, 8, 0, -1245111, 8, 0, -1245110, 8, 0, -1245109, 8, 0, -1245108, 8, 0, -1245107, 8, 0, -1245106, 8, 0, -1245105, 8, 0, -1245104, 8, 0, -1245103, 8, 0, -1245102, 8, 0, -1245101, 8, 0, -1245100, 8, 0, -1245099, 8, 0, -1245098, 8, 0, -1245097, 8, 0, -1245096, 8, 0, -1245095, 8, 0, -1245094, 8, 0, -1245093, 8, 0, -1245092, 8, 0, -1245091, 8, 0, -1245090, 8, 0, -1245089, 8, 0, -1245088, 8, 0, -1245087, 8, 0, -1245086, 8, 0, -1245085, 8, 0, -1245084, 8, 0, -1245083, 8, 0, -1245082, 8, 0, -1245081, 10, 0, -1245080, 7, 0, -1179582, 5, 0, -1179581, 11, 0, -1179580, 8, 0, -1179579, 8, 0, -1179578, 8, 0, -1179577, 8, 0, -1179576, 8, 0, -1179575, 8, 0, -1179574, 8, 0, -1179573, 8, 0, -1179572, 8, 0, -1179571, 8, 0, -1179570, 8, 0, -1179569, 8, 0, -1179568, 8, 0, -1179567, 8, 0, -1179566, 8, 0, -1179565, 8, 0, -1179564, 8, 0, -1179563, 8, 0, -1179562, 8, 0, -1179561, 8, 0, -1179560, 8, 0, -1179559, 8, 0, -1179558, 8, 0, -1179557, 8, 0, -1179556, 8, 0, -1179555, 8, 0, -1179554, 8, 0, -1179553, 8, 0, -1179552, 8, 0, -1179551, 8, 0, -1179550, 8, 0, -1179549, 8, 0, -1179548, 8, 0, -1179547, 8, 0, -1179546, 10, 0, -1179545, 7, 0, -1114045, 3, 0, -1114044, 8, 0, -1114043, 8, 0, -1114042, 8, 0, -1114041, 8, 0, -1114040, 8, 0, -1114039, 8, 0, -1114038, 8, 0, -1114037, 8, 0, -1114036, 8, 0, -1114035, 8, 0, -1114034, 8, 0, -1114033, 10, 0, -1114032, 6, 0, -1114031, 11, 0, -1114030, 8, 0, -1114029, 8, 0, -1114028, 10, 0, -1114027, 6, 0, -1114026, 6, 0, -1114025, 11, 0, -1114024, 8, 0, -1114023, 8, 0, -1114022, 8, 0, -1114021, 8, 0, -1114020, 8, 0, -1114019, 8, 0, -1114018, 8, 0, -1114017, 8, 0, -1114016, 8, 0, -1114015, 8, 0, -1114014, 8, 0, -1114013, 8, 0, -1114012, 8, 0, -1114011, 10, 0, -1114010, 7, 0, -1048509, 5, 0, -1048508, 11, 0, -1048507, 8, 0, -1048506, 8, 0, -1048505, 8, 0, -1048504, 8, 0, -1048503, 8, 0, -1048502, 8, 0, -1048501, 8, 0, -1048500, 8, 0, -1048499, 8, 0, -1048498, 8, 0, -1048497, 4, 0, -1048495, 3, 0, -1048494, 8, 0, -1048493, 8, 0, -1048492, 4, 0, -1048489, 3, 0, -1048488, 8, 0, -1048487, 8, 0, -1048486, 8, 0, -1048485, 8, 0, -1048484, 8, 0, -1048483, 8, 0, -1048482, 8, 0, -1048481, 8, 0, -1048480, 8, 0, -1048479, 8, 0, -1048478, 8, 0, -1048477, 8, 0, -1048476, 10, 0, -1048475, 7, 0, -982972, 5, 0, -982971, 6, 0, -982970, 6, 0, -982969, 6, 0, -982968, 6, 0, -982967, 6, 0, -982966, 6, 0, -982965, 6, 0, -982964, 6, 0, -982963, 6, 0, -982962, 6, 0, -982961, 7, 0, -982959, 3, 0, -982958, 8, 0, -982957, 8, 0, -982956, 4, 0, -982953, 5, 0, -982952, 6, 0, -982951, 6, 0, -982950, 11, 0, -982949, 8, 0, -982948, 8, 0, -982947, 8, 0, -982946, 8, 0, -982945, 8, 0, -982944, 8, 0, -982943, 10, 0, -982942, 6, 0, -982941, 6, 0, -982940, 7, 0, -917423, 3, 0, -917422, 8, 0, -917421, 8, 0, -917420, 4, 0, -917414, 5, 0, -917413, 6, 0, -917412, 6, 0, -917411, 6, 0, -917410, 6, 0, -917409, 6, 0, -917408, 6, 0, -917407, 7, 0, -851887, 3, 0, -851886, 8, 0, -851885, 8, 0, -851884, 4, 0, -786351, 3, 0, -786350, 8, 0, -786349, 8, 0, -786348, 4, 0, -720815, 3, 0, -720814, 8, 0, -720813, 8, 0, -720812, 4, 0, -655302, 1, 0, -655301, 1, 0, -655300, 1, 0, -655299, 1, 0, -655298, 1, 0, -655297, 1, 0, -655296, 1, 0, -655295, 1, 0, -655294, 1, 0, -655293, 1, 0, -655292, 1, 0, -655291, 1, 0, -655290, 1, 0, -655289, 1, 0, -655288, 1, 0, -655287, 1, 0, -655286, 1, 0, -655285, 1, 0, -655284, 1, 0, -655283, 1, 0, -655282, 1, 0, -655281, 1, 0, -655280, 1, 0, -655279, 12, 0, -655278, 8, 0, -655277, 8, 0, -655276, 4, 0, -589766, 8, 0, -589765, 8, 0, -589764, 8, 0, -589763, 8, 0, -589762, 8, 0, -589761, 8, 0, -589760, 8, 0, -589759, 8, 0, -589758, 8, 0, -589757, 8, 0, -589756, 8, 0, -589755, 8, 0, -589754, 8, 0, -589753, 8, 0, -589752, 8, 0, -589751, 8, 0, -589750, 8, 0, -589749, 8, 0, -589748, 8, 0, -589747, 8, 0, -589746, 8, 0, -589745, 8, 0, -589744, 8, 0, -589743, 8, 0, -589742, 8, 0, -589741, 8, 0, -589740, 4, 0, -524230, 8, 0, -524229, 8, 0, -524228, 8, 0, -524227, 8, 0, -524226, 8, 0, -524225, 8, 0, -524224, 8, 0, -524223, 8, 0, -524222, 8, 0, -524221, 8, 0, -524220, 8, 0, -524219, 8, 0, -524218, 8, 0, -524217, 8, 0, -524216, 8, 0, -524215, 8, 0, -524214, 8, 0, -524213, 8, 0, -524212, 8, 0, -524211, 8, 0, -524210, 8, 0, -524209, 8, 0, -524208, 8, 0, -524207, 8, 0, -524206, 8, 0, -524205, 8, 0, -524204, 4, 0, -458694, 6, 0, -458693, 6, 0, -458692, 6, 0, -458691, 6, 0, -458690, 6, 0, -458689, 6, 0, -458688, 6, 0, -458687, 6, 0, -458686, 6, 0, -458685, 6, 0, -458684, 6, 0, -458683, 6, 0, -458682, 6, 0, -458681, 6, 0, -458680, 6, 0, -458679, 6, 0, -458678, 6, 0, -458677, 6, 0, -458676, 6, 0, -458675, 6, 0, -458674, 6, 0, -458673, 6, 0, -458672, 6, 0, -458671, 6, 0, -458670, 6, 0, -458669, 6, 0, -458668, 7, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -431.0 ],
"_edit_vertical_guides_": [ 928.0 ]
}

[node name="Player_detector" parent="." instance=ExtResource( 4 )]
position = Vector2( 1328, -211 )

[node name="CollisionShape2D" parent="Player_detector" index="0"]
position = Vector2( 0, 2 )

[node name="Positions" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawn0" type="Position2D" parent="Positions"]
position = Vector2( 1176, -470 )

[node name="Spawn1" type="Position2D" parent="Positions"]
position = Vector2( 1269, -393 )

[node name="Spawn2" type="Position2D" parent="Positions"]
position = Vector2( 1478, -379 )

[node name="Spawn3" type="Position2D" parent="Positions"]
position = Vector2( 1563, -457 )

[node name="First" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Doors_front" parent="First" instance=ExtResource( 3 )]
position = Vector2( 1319, -263 )

[node name="Doors_front2" parent="First" instance=ExtResource( 3 )]
position = Vector2( 1336, -263 )

[node name="Second" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Doors_front3" parent="Second" instance=ExtResource( 3 )]
position = Vector2( 1335, -425 )

[node name="Doors_front4" parent="Second" instance=ExtResource( 3 )]
position = Vector2( 1352, -425 )

[node name="Detect_close_doors" type="Area2D" parent="."]
position = Vector2( 1328, -316 )
collision_layer = 8
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Detect_close_doors"]
polygon = PoolVector2Array( -15, 28, -31, 44, -15, 29, 17, 29, 33, 45, 18, 28 )

[editable path="Player_detector"]
